feat: Add a gradle plugin (#30)